@@ -7,6 +7,9 @@ import net.sf.cglib.proxy.Enhancer;
 import net.sf.cglib.proxy.MethodInterceptor;
 import net.sf.cglib.proxy.MethodProxy;
 
+//方法区和运行时常量池溢出
+//-verbose:gc -XX:PermSize=10M -XX:MaxPermSize=10M
+
 public class Test_oom_javaMethodArea {
 	
 	public static void main(String[] args)
